<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/layoutBackgroundLight">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:background="@color/white" >

            <ImageView
                android:id="@+id/thank_you_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_items_purchased"/>

            <TextView
                android:id="@+id/thank_you_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thank_you_for_shopping"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/continue_shopping_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/continue_shopping"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@drawable/rounded_corners_primary_dark_bg" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/order_status_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/order_status"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@drawable/rounded_corners_primary_color_bg" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/thank_you_return_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/return_txt"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/button_margin"
                android:background="@drawable/rounded_corners_primary_dark_bg" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/banner_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
    </FrameLayout>

</RelativeLayout>
