<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackgroundLight">

    <include
        android:id="@+id/myToolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:scrollbars="none"
        android:layout_below="@+id/myToolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/logoImg"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="fitXY"
                android:src="@drawable/isupery" />

            <LinearLayout
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <Button
                    android:id="@+id/guest_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_guest"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/rounded_corners_primary_color_bg"
                    android:layout_alignParentBottom="true"/>
                <LinearLayout
                    android:id="@+id/login_fields_layout"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/user_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_field_height"
                        android:background="@drawable/rounded_corners_edittext_dark"
                        android:drawablePadding="15dp"
                        android:drawableStart="@drawable/ic_person"
                        android:gravity="start|center_vertical"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorSecondary"
                        android:textColorHint="@color/textColorPrimaryDark"/>
                    <EditText
                        android:id="@+id/user_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_field_height"
                        android:layout_marginTop="@dimen/input_field_margin"
                        android:background="@drawable/rounded_corners_edittext_dark"
                        android:drawablePadding="15dp"
                        android:drawableStart="@drawable/ic_lock"
                        android:gravity="start|center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword|textNoSuggestions"
                        android:paddingEnd="15dp"
                        android:paddingStart="15dp"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColorSecondary"
                        android:textColorHint="@color/textColorPrimaryDark"/>
                </LinearLayout>

                <FrameLayout
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal"
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:background="@drawable/rounded_corners_primary_dark_bg">
                    <TextView
                        android:id="@+id/login_btn_txt"
                        android:text="@string/login"
                        android:layout_gravity="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:gravity="center"
                        android:visibility="visible"
                        android:textSize="@dimen/button_text_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.github.ybq.android.spinkit.SpinKitView
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        android:id="@+id/login_progress"
                        style="@style/SpinKitView.Large.Circle"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        app:SpinKit_Color="@color/white"/>
                </FrameLayout>
                <TextView
                    android:id="@+id/forgot_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:textStyle="italic"
                    android:layout_marginTop="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/not_a_member"
                        android:textColor="@color/textColorSecondaryLight"
                        android:textSize="16sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/login_signupText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/signup"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="5dp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
