<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_title"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/note_title_dialog_et"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/title"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionSearch"
                android:textSize="16sp"
                android:textColor="@color/textColorSecondaryLight"
                android:textColorHint="@color/textColorPrimaryDark"
                android:padding="5dp"
                android:background="@drawable/rounded_corners_edittext_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <Button
                android:id="@+id/note_title_dialog_submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/create_note"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/rounded_corners_primary_color_bg" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
