<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/shop_selector_title"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:id="@+id/shop_selector_dialog_header"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="3dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:text="@string/choose_your_shop"
                            android:textSize="18sp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                        <RelativeLayout
                            android:layout_margin="10dp"
                            android:background="@drawable/rounded_corners_edittext_dark"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/shop_selector_dialog_clear_btn"
                                android:src="@drawable/ic_cross"
                                android:layout_centerVertical="true"
                                android:padding="10dp"
                                android:visibility="invisible"
                                android:layout_alignParentEnd="true"
                                android:layout_width="35dp"
                                android:layout_height="35dp"/>
                            <EditText
                                android:id="@+id/shop_selector_dialog_search_et"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:inputType="textNoSuggestions"
                                android:imeOptions="actionSearch"
                                android:hint="@string/earch_shop_hint"
                                android:textSize="14sp"
                                android:background="@null"
                                android:maxLines="1"
                                android:textColor="@color/textColorSecondaryLight"
                                android:textColorHint="@color/textColorPrimaryDark"
                                android:padding="10dp"
                                android:layout_toStartOf="@id/shop_selector_dialog_clear_btn"
                                />

                        </RelativeLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shop_selector_recyclerview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.github.ybq.android.spinkit.SpinKitView
                        android:id="@+id/shop_selector_progress_bar"
                        style="@style/SpinKitView.Large.Circle"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginBottom="50dp"
                        android:layout_marginTop="50dp"
                        android:visibility="invisible"
                        android:layout_centerInParent="true"
                        app:SpinKit_Color="@color/colorPrimary"/>
                    <Button
                        android:id="@+id/shop_selector_dialog_try_again"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="50dp"
                        android:layout_marginTop="50dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        android:text="@string/try_again"
                        android:textColor="@color/colorPrimary"
                        android:background="@null"/>
                    <TextView
                        android:id="@+id/shop_selector_dialog_nothing_found_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="50dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/nothing_found"
                        android:textColor="@color/textColorPrimaryDark"
                        android:visibility="invisible" />
                </RelativeLayout>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>